@@ -1,5 +1,10 @@
 2012-05-11  Gabriel Dos Reis  <gdr@cs.tamu.edu>
 
+	* interp/preparse.lisp (PARSEPRINT): Move to spad-parser.boot.
+	Rename as parsePrint.
+
+2012-05-11  Gabriel Dos Reis  <gdr@cs.tamu.edu>
+
 	* interp/preparse.lisp (ADD-PARENS-AND-SEMIS-TO-LINE): Move to
 	spad-parser.boot Rename as addParensAndSemisToLine.
 	(PARSEPILES): Move spad-parser.boot.  Rename as parsePiles.
